# certgen

./: .teilnehmer.json.kate-swp  Cargo.toml  Musterzertifikat.odt  README.md  teilnehmer.json
Kubernetes/: certificate_10_Donald.odt  certificate_1_Leo.odt  certificate_2_Max.odt  certificate_3_Markus.odt  certificate_4_Drin.odt  certificate_5_Moritz.odt  certificate_6_Sam.odt  certificate_7_Peter.odt  certificate_8_Popeye.odt  certificate_9_Obama.odt
Ubuntu-Zertifikate/: certificate_10_svs.odt  certificate_12_bvd.odt  certificate_1_sdfdsfsadfs.odt  certificate_2_dsfsds.odt  certificate_3_gdsvsdvs.odt  certificate_4_dvsdvds.odt  certificate_5_vdsvdsvvds.odt  certificate_6_vds.odt  certificate_7_dsvs.odt  certificate_8_dd.odt  certificate_9_vs.odt
lkasldkj/: certificate_1_Leo.odt  certificate_1_sad.odt  certificate_4_das.odt  certificate_5_dasd.odt
src/: error.rs  interactive.rs  lib.rs  mail.rs  main.rs
src/cli/: args.rs
src/odf/: document.rs  mod.rs  replacer.rs
src/template/: data.rs  mod.rs
src/urkundo/: teilnehmer.json
test/: integration_test.rs
