[package]
name = "certgen"
version = "0.1.0"
edition = "2021"
authors = ["DudeTux42"]
description = "CLI tool to fill ODF certificate templates with custom data"
readme = "README.md"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }
# ODF/ZIP handling
zip = "0.6"
# Check if soffice is in PATH
which = "4"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging
env_logger = "0.11"
log = "0.4"
regex = "1.12.2"


[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "certgen"
path = "src/main.rs"

[lib]
name = "certgen"
path = "src/lib.rs"
